# gh-actions2

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/hello_world/: __init__.py
